# nova-notes

./: .gitignore  CHANGELOG.md  Makefile  README.md  eslint.config.mjs  index.html  package.json  pyproject.toml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js
.github/workflows/: ci.yml
.venv-ci/: pyvenv.cfg
nova_notes/: __init__.py
src/: App.tsx  styles.css  types.ts
src/lib/: markdown.ts  notes.ts
test/: notes.test.ts
tests/: test_smoke.py
